--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/Theme.AndroidApp"
         tools:targetApi="31">
         <activity
-            android:name=".ui.auth.fragments.AuthActivity"
+            android:name=".ui.auth.AuthActivity"
             android:exported="true" />
         <activity
             android:name=".ui.main.MainActivity"
@@ -26,7 +26,6 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
